# CryptoScreener

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  snapshot.json
screener/: __main__.py  alerts.py  api.py  bias.py  bus.py  charts.py  client.py  config.py  detectors.py  engine.py  evaluator.py  models.py  news.py  orderbook.py  questdb_reader.py  recorder.py  scheduler.py  signal_history.py  store.py  tui.py
screener/exchanges/: __init__.py  binance.py  bybit.py  gateio.py
tests/: test_bias.py  test_detectors.py  test_signal_history.py  test_store_tiers.py
