[project]
name = "bybit-screener"
version = "0.1.0"
description = "Bybit futures crypto screener with TUI, REST API, and alerts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "textual-plotext>=1.0.1",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "questdb>=2.0.0",
]

[project.scripts]
screener = "screener.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screener"]
